Move ws-security system tests into their own module as the ws-specs module was beginning to take a lot of time.
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1080341 13f79535-47bb-0310-9956-ffa450edef68