@@ -26,8 +26,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.systests</groupId>
-    <artifactId>cxf-systests-ws-specs</artifactId>
-    <name>Apache CXF WS-* Specifications System Tests</name>
+    <artifactId>cxf-systests-ws-security</artifactId>
+    <name>Apache CXF WS-Security System Tests</name>
     <version>2.4.0-SNAPSHOT</version>
     <url>http://cxf.apache.org</url>
     <build>
@@ -43,10 +43,16 @@
                         <configuration>
                             <fork>${cxf.codegenplugin.forkmode}</fork>
                             <testSourceRoot>${basedir}/target/generated/src/test/java</testSourceRoot>
-                            <testWsdlRoot>${basedir}/src/test/resources/wsdl_systest_wsspec</testWsdlRoot>
+                            <testWsdlRoot>${basedir}/src/test/resources/wsdl_systest_wssec</testWsdlRoot>
                             <wsdlOptions>
                                 <wsdlOption>
-                                    <wsdl>${basedir}/src/test/resources/wsdl_systest_wsspec/addr-jaxwsmm.wsdl</wsdl>
+                                    <wsdl>${basedir}/src/test/resources/wsdl_systest_wssec/wssec10/WsSecurity10.wsdl</wsdl>
+                                </wsdlOption>
+                                <wsdlOption>
+                                    <wsdl>${basedir}/src/test/resources/wsdl_systest_wssec/wssec11/WsSecurity11.wsdl</wsdl>
+                                </wsdlOption>
+                                <wsdlOption>
+                                    <wsdl>${basedir}/src/test/resources/wsdl_systest_wssec/wssc/WSSecureConversation.wsdl</wsdl>
                                 </wsdlOption>
                             </wsdlOptions>
                         </configuration>
@@ -112,16 +118,6 @@
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-transports-jms</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-core</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.apache.cxf</groupId>
@@ -138,21 +134,17 @@
             <artifactId>cxf-rt-ws-addr</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-ws-rm</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-policy</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-security</artifactId>
             <version>${project.version}</version>
-        </dependency-->
+        </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-testutils</artifactId>
@@ -179,12 +171,7 @@
              <groupId>com.sun.xml.fastinfoset</groupId>
              <artifactId>FastInfoset</artifactId>
          </dependency>
-        <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-            <version>${cxf.derby.version}</version>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
     <properties>
         <cxf.surefire.fork.mode>pertest</cxf.surefire.fork.mode>
@@ -199,71 +186,6 @@
                     <scope>test</scope>
                 </dependency>
             </dependencies>
-            <properties>
-                <cxf.spi-dir>spi-2.2</cxf.spi-dir>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>add-jaxws22-test-source</id>
-                                <phase>generate-test-sources</phase>
-                                <goals>
-                                    <goal>add-test-source</goal>
-                                </goals>
-                                <configuration>
-                                    <sources>
-                                        <source>${basedir}/src/test/jaxws22</source>
-                                    </sources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                             <execution>
-                                 <id>create-endorsed-dir</id>
-                                 <phase>validate</phase>
-                                 <goals>
-                                     <goal>copy</goal>
-                                 </goals>
-                                 <configuration>
-                                     <artifactItems>
-                                         <artifactItem>
-                                             <groupId>org.apache.geronimo.specs</groupId>
-                                             <artifactId>geronimo-jaxws_2.2_spec</artifactId>
-                                             <outputDirectory>${basedir}/target/endorsed</outputDirectory>
-                                         </artifactItem>
-                                     </artifactItems>
-                                 </configuration>
-                             </execution>
-                         </executions>
-                    </plugin>
-                    
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <compilerArguments>
-                                <endorseddirs>${basedir}/target/endorsed</endorseddirs>
-                            </compilerArguments>
-                        </configuration>
-                     </plugin>
-                     
-                     <plugin>
-                         <groupId>org.apache.maven.plugins</groupId>
-                         <artifactId>maven-surefire-plugin</artifactId>
-                         <configuration>
-                             <argLine>-Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
-                         </configuration>
-                     </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
 
